--- a/ci/build.yml
+++ b/ci/build.yml
@@ -14,3 +14,9 @@ inputs:
 run:
   path: gopath/src/github.com/cloudfoundry/java-buildpack-memory-calculator/ci/build.sh
 
+params:
+  ARTIFACTORY_REPOSITORY: libs-snapshot-local
+  VERSION:                3.0.0.BUILD-SNAPSHOT
+
+  ARTIFACTORY_USERNAME:
+  ARTIFACTORY_PASSWORD:
