--- a/ci/build.yml
+++ b/ci/build.yml
@@ -15,8 +15,8 @@ run:
   path: gopath/src/github.com/cloudfoundry/java-buildpack-memory-calculator/ci/build.sh
 
 params:
-  ARTIFACTORY_REPOSITORY: libs-snapshot-local
-  VERSION:                3.1.0.BUILD-SNAPSHOT
+  ARTIFACTORY_REPOSITORY: libs-release-local
+  VERSION:                3.1.0.RELEASE
 
   ARTIFACTORY_USERNAME:
   ARTIFACTORY_PASSWORD:
