--- a/ci/unit-test.yml
+++ b/ci/unit-test.yml
@@ -5,7 +5,7 @@ image_resource:
   type: registry-image
   source:
     repository: golang
-    tag: latest
+    tag: 1.17
 
 inputs:
   - name: java-buildpack-memory-calculator
